--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
+    "nth-check": "^2.1.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2"
   }
 }
