--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flowbite-react": "^0.4.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.2",
