--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "chart.js": "^4.3.3",
+    "dotenv": "^16.3.1",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
     "react": "^18.2.0",
