--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,2 @@
 REACT_APP_MAPS_API_KEY =
-REACT_APP_REGISTER_BACKEND_URL = 
-REACT_APP_LOGIN_BACKEND_URL =
-REACT_APP_LOGOUT_BACKEND_URL = 
-REACT_APP_SESSION_BACKEND_URL = 
-REACT_APP_VERIFY_BACKEND_URL = 
-REACT_APP_RESEND_BACKEND_URL = 
+REACT_APP_BASE_URL =
