--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.0",
     "@react-google-maps/api": "^2.19.2",
+    "@react-pdf/renderer": "^3.1.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
