--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
