help and support front-end updated

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Eliger",
+  "name": "Eliger | Rent, Ride & Drive",
   "icons": [
     {
       "src": "favicon.ico",
